--- a/MijnErvaringen.html
+++ b/MijnErvaringen.html
@@ -269,98 +269,87 @@
 			</div>
 			<div class="col-md-12">
 				<div class="featured-carousel owl-carousel">
-					<div class="item"> 
-						<div class="work">
+					<div class="item">  <!--Gebroken teen-->
+						<div class="work"> 
 								<div class="cardwork">
-									<figure img>
+									<figure> <img src="Pictures/Ervaringen/Teen.jpg" height="450px" width="auto" > 
 									<p>Hagaziekenhuis</p>
 										<figcaption>
 										Ergens in 2018 had ik mijn grote teen gebroken. <br>
 										Tijdens het tillen van een apparaat schoot het blok van 25kg los op mijn teen. 
-										<br>
+										<br> <br> Ik moest met stokken aangepast werk gaan doen voor twee maanden. <br> 
+										Het werk bleef nog steeds even leuk en leerzaam.										
 										</figcaption>
-									</figure>									
-							<div class="text pt-3 w-100 text-center">
-								<h3><a href="#">Moment 01</a></h3>
-								<span>Web Design</span>
-								</div>	
+									</figure>										
 								</a>
 							</div>
 						</div>
 					</div>
-					<div class="item">
-						<div class="work">									
+					<div class="item"> <!-- Tramhalte Vabi-->	
+						<div class="work">								
 								<div class="cardwork">
 									<figure>
-									<p>Turn back the clock</p>
+										<figure> <img src="Pictures/Ervaringen/Stage.jpg" height="auto" width="auto" > 
+									<p>Stage bij Vabi</p>
 										<figcaption>
-										Sometimes we have to<br> turn back the clock<br> to face our fears.<br> Search back through our memories<br> to find out how and when they began.<br> Look deep within our soul<br> for the answers that we seek.<br> Locate the source of our torment<br>			to eradicate it complete.<br> Our fears began somewhere<br> and the only way to find out where and when<br> is to turn back the clock.
-										<br>
-										<div class="author">― David Harris</div>
+										Een oude klasgenoot van me zag me toevallig bij de tramhalte in 2019 aan de brasserskade.<br>
+										Ik kwam van stage aan en was aan het wachten op de tram. <br> <br> van 9:30 tot 17:00 liep ik er stage. <br>
+									    Ook kan ik me nog goed herinneren dat ik mijn fiets daar bij de tramhalte had geparkeerd zodat ik verder naar mijn stage 
+										kon gaan fietsen. Later had ik een scooter en hoefde ik niet meer met de tram te gaan reizen, dit was fijner omdat ik sneller 
+										op locatie aankwam en ook kon genieten van het weer. 
 										</figcaption>
 									</figure>
-																	
-							<div class="text pt-3 w-100 text-center">
-								<h3><a href="#">Moment 02</a></h3>
-								<span>Web Design</span>
-							</div>
 							</a>
 							</div>
 						</div>
 					</div>
-					<div class="item">
-						<div class="work">									
+					<div class="item"><!-- Lange Werkdagen bij Hema -->	
+						<div class="work">	 							
 								<div class="cardwork">
 									<figure>
-									<p>Turn back the clock</p>
+										<figure> <img src="Pictures/Ervaringen/Schev.jpeg" height="auto" width="auto" > 
+									<p>Lange werkdagen</p>
 										<figcaption>
-										Sometimes we have to<br> turn back the clock<br> to face our fears.<br> Search back through our memories<br> to find out how and when they began.<br> Look deep within our soul<br> for the answers that we seek.<br> Locate the source of our torment<br>			to eradicate it complete.<br> Our fears began somewhere<br> and the only way to find out where and when<br> is to turn back the clock.
-										<br>
-										<div class="author">― David Harris</div>
+										In 2016 werkte ik bij hema in scheveningen. Ik wou graag veel uren draaien en maakte mijn leidingen gevende dit mogelijk voor mij.
+										Ik werkte bijvoorbeeld van 07:30 tot 17:00 of van 13:00 tot 21:00 in de avond.
+										De foto die je hier ziet is in de avond genomen door mij. Om naar scheveningen te reizen kon ik de bus nemen 
+										of de tram zonder over te stappen. beide ritten duurde 1 uur lang en ik moest 50 euro betalen per maand voor een twee zone abonnement.  
 										</figcaption>
-									</figure>									
-							<div class="text pt-3 w-100 text-center">
-								<h3><a href="#">Moment 03</a></h3>
-								<span>Web Design</span>
-							</div>	
+									</figure>										
 						</a>
 							</div>
 						</div>
 					</div>
-					<div class="item">
-						<div class="work">									
+					<div class="item"> 	<!-- Multimavision -->	
+						<div class="work">	 								
 								<div class="cardwork">
 									<figure>
-									<p>Turn back the clock</p>
+										<img src="Pictures/Ervaringen/Multi.jpg" height="auto" width="auto" > 
+									<p>Multimavision stage</p>
 										<figcaption>
-										Sometimes we have to<br> turn back the clock<br> to face our fears.<br> Search back through our memories<br> to find out how and when they began.<br> Look deep within our soul<br> for the answers that we seek.<br> Locate the source of our torment<br>			to eradicate it complete.<br> Our fears began somewhere<br> and the only way to find out where and when<br> is to turn back the clock.
-										<br>
-										<div class="author">― David Harris</div>
+									Bij mijn stage mutimavision in 2016 moest ik medewerkers te hulp schieten met computerproblemen.
+									Of wanneer het rustig was kon ik gaan knutselen met deffecte computers.
+									Hier heb ik veel geleerd over het assebleren en demonteren van computers.
+									<br> <br>
+									Een leuke herinnering hiervan was dat ik altijd mijn pauze op het dak kon nemen en even kon genieten van het weer.
 										</figcaption>
 									</figure>									
-							<div class="text pt-3 w-100 text-center">
-								<h3><a href="#">Moment 04</a></h3>
-								<span>Web Design</span>
-							</div>	
 						</a>
 							</div>
 						</div>
 					</div>
-					<div class="item">
+					<div class="item">  <!-- Hema Halloween -->	
 						<div class="work">									
 								<div class="cardwork">
 									<figure>
-									<p>Turn back the clock</p>
+										<img src="Pictures/Ervaringen/Hemasch.jpg" height="auto" width="auto" > 
+									<p>Hema Halloween</p>
 										<figcaption>
-										Sometimes we have to<br> turn back the clock<br> to face our fears.<br> Search back through our memories<br> to find out how and when they began.<br> Look deep within our soul<br> for the answers that we seek.<br> Locate the source of our torment<br>			to eradicate it complete.<br> Our fears began somewhere<br> and the only way to find out where and when<br> is to turn back the clock.
-										<br>
-										<div class="author">― David Harris</div>
+										Tijdens mijn diensten in Hema scheveningen heb ik veel evenementen mogen meemaken.
+										Het was Halloween en ik stond in de keuken ijsjes en hotdogs te verkopen. <br>
+										Toen ik de clown zag besloot ik een foto te nemen want zijn kostuum zag er het leukst uit tussen de ponies.
 										</figcaption>
-									</figure>								
-							<div class="text pt-3 w-100 text-center">
-								<h3><a href="#">Moment 05</a></h3>
-								<span>Web Design</span>
-							</div>	
+									</figure>									
 						</a>
 							</div>
 						</div>
