--- a/MijnErvaringen.html
+++ b/MijnErvaringen.html
@@ -150,11 +150,14 @@
 		<small>jul. 2016 - heden . 5 jaar <br /> Leyweg en omgeving, Den Haag</small>
 		<p> 
 		<b>Werknemer Ziekenhuis</b> <br /> Flexmedewerker: 
+		<div class="read-more-content">
 		<ul>
-			<li>Huishoud</li>
-			<li>Sainitaire onderhoud</li>
-			<li>Medewerker assistent</li>
+				<li>Huishoud</li> 
+				<li>Sainitaire onderhoud</li>
+				<li>Medewerker assistent</li> 
 		</ul>
+		</div>
+		<a href="javascript:void(0);" class="read-more" title="Read More">Read More</a>
 		</p>
 		</details>
 		<details id="details"> <!--Vabi-->
