--- a/MijnErvaringen.html
+++ b/MijnErvaringen.html
@@ -5,7 +5,7 @@
 		<meta content="width=device-width, initial-scale=1.0" name="viewport">
 		<title>Mijn ervaring</title>
 		<link rel="stylesheet" href="CSS/style.css">
-		<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+		<link rel="stylesheet" href="bootstrap/bootstrap.css/bootstrap.min.css">
 		<link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
 		<link rel="stylesheet" href="CSS/owl.carousel.min.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/4.5.6/css/ionicons.min.css">
