--- a/MijnErvaringen.html
+++ b/MijnErvaringen.html
@@ -139,8 +139,8 @@
 			  </div>
 			</div>
 		  </div>
-<!--model---------------------->
-<section>
+
+<section>      <!--Werk Ervaring -->
 	<div class="dropdown">
 		<h1>
 		Ervaringen
@@ -150,14 +150,14 @@
 		<small>jul. 2016 - heden . 5 jaar <br /> Leyweg en omgeving, Den Haag</small>
 		<p> 
 		<b>Werknemer Ziekenhuis</b> <br /> Flexmedewerker: 
-		<div class="read-more-content">
+		<div class="lees-meer-content">
 		<ul>
 				<li>Huishoud</li> 
 				<li>Sainitaire onderhoud</li>
 				<li>Medewerker assistent</li> 
 		</ul>
 		</div>
-		<a href="javascript:void(0);" class="read-more" title="Read More">Read More</a>
+		<a href="javascript:void(0);" class="lees-meer" title="lees meer">Lees meer</a>
 		</p>
 		</details>
 		<details id="details"> <!--Vabi-->
@@ -165,12 +165,15 @@
 		<small>feb. 2019 - jan. 2020 . 1 jaar <br /> Brasserskade en omgeving, Delft</small>
 		<p> 
 		<b>Stagiair Systeembeheerder</b> <br /> Medwerker Beheer ICT: 
+		<div class="lees-meer-content">
 		<ul>
 			<li>Installeren en onderhouden van hardware, software en verbindingen</li>
 			<li>Behandelen van incidentmeldingen</li>
 			<li>Opstellen van instructies</li>
 			<li>Mondeling toelichting geven aan gebruikers</li>
 		</ul>
+		</div>
+		<a href="javascript:void(0);" class="lees-meer" title="lees meer">Lees meer</a>
 		</p>
 		</details>
 		<details id="details"> <!--Multimavision-->
@@ -178,6 +181,7 @@
 		<small>sep. 2016 - mrt. 2017 . 7 maanden <br /> Wateringen en omgeving, Den Haag</small>
 		<p> 
 		<b>Stagiair systeembeheerder</b> <br /> Medewerker beheer ICT: 
+		<div class="lees-meer-content">
 		<ul>
 			<li>Assembleren & Demonteren</li>
 			<li>Software Installaties</li>
@@ -185,6 +189,8 @@
 			<li>Sales</li>
 			<li>Ondersteuning verlenen aan medewerkers</li>
 		</ul>
+		</div>
+		<a href="javascript:void(0);" class="lees-meer" title="lees meer">Lees meer</a>
 		</p>
 		</details>
 		<details id="details"> <!--Basecom-->
@@ -192,23 +198,29 @@
 		<small>apr. 2015 - jul. 2016 . 1 jaar 4 maanden <br /> Zuiderpark en omgeving, Den Haag</small>
 		<p> 
 		<b>Stagiair ICT medewerker</b> <br /> Medewerker ICT: 
+		<div class="lees-meer-content">
 		<ul>
 			<li>Computers onderhouden</li>
 			<li>Reparaties (APK)</li>
 			<li>Klantenservice</li>
 		</ul>
+		</div>
+		<a href="javascript:void(0);" class="lees-meer" title="lees meer">Lees meer</a>
 		</p>
 		</details>
 		<details id="details"> <!--Hema-->
 		<summary><b>Hema</b></summary> 
 		<small>Jul. 2014 jul. 2016 . 2 jaar en 1 maand <br /> Scheveningen + leyweg en omgeving, Den Haag</small>
 		<p> 
-		<b>Winkel Verkoper</b> <br /> Flexmedewerker: 
+		<b>Winkel Verkoper</b> <br /> Flexmedewerker:
+		<div class="lees-meer-content"> 
 		<ul>
 			<li>Kassa</li>
 			<li>Keuken</li>
 			<li>Magazijn</li>
 		</ul>
+		</div>
+		<a href="javascript:void(0);" class="lees-meer" title="lees meer">Lees meer</a>
 		</p>
 		</details>
 		<details id="details"> <!--Vloerenonlinevoordeel-->
@@ -216,10 +228,13 @@
 		<small>okt. 2014 nov. 2014 . 2 maanden <br /> Pijnacker en omgeving, Nootdorp</small>
 		<p> 
 		<b>Stagiair ICT medewerker</b> <br /> Medewerker ICT: 
+		<div class="lees-meer-content">
 		<ul>
 			<li>Website onderhouden</li>
 			<li>Advertenties plaatsen</li>
 		</ul>
+		</div>
+		<a href="javascript:void(0);" class="lees-meer" title="lees meer">Lees meer</a>
 		</p>
 		</details>
 		<details id="details"> <!--Albertheijn-->
@@ -227,9 +242,12 @@
 		<small>feb. 2014 jul. 2014 . 6 maanden <br /> Escamp en omgeving, Den Haag</small>
 		<p> 
 		<b>Winkel Verkoper</b> <br /> Medewerker Vakkenvuller: 
+		<div class="lees-meer-content">
 		<ul>
 			<li>vakkenvullen</li>
 		</ul>
+		</div>
+		<a href="javascript:void(0);" class="lees-meer" title="lees meer">Lees meer</a>
 		</p>
 		</details>
 		<details id="details"> <!--J.C.K Electrotechniek-->
@@ -237,34 +255,34 @@
 			<small>feb. 2014 jun. 2014 . 5 maanden <br /> Escamp en omgeving, Den Haag</small>
 			<p> 
 			<b>Stagiair Electrotechniek</b> <br /> Medewerker Elektricien: 
+			<div class="lees-meer-content">
 			<ul>
 				<li>Kabels trekken</li>
 				<li>Inspecties Uitvoeren</li>
 				<li>Kabelgoten Monteren</li>
 			</ul>
+			</div>
+			<a href="javascript:void(0);" class="lees-meer" title="lees meer">Lees meer</a>
 			</p>
 			</details>
 		<details id="details"> <!--stichting MOOI-->
 		<summary><b>Stichting MOOI</b></summary>
 		<small>jan. 2013 jun. 2013 . 6 maanden <br /> Escamp en omgeving, Den Haag</small>
 		<p> 
-		<b>Stagiair Stichting</b> <br /> Medewerker Jongerwerk: 
+		<b>Stagiair Stichting</b> <br /> Medewerker Jongerwerk:
+		<div class="lees-meer-content"> 
 		<ul>
 			<li>Activiteitenbegeleider</li>
 			<li>huiswerkbegeleider</li>
 		</ul>
+		</div>
+		<a href="javascript:void(0);" class="lees-meer" title="lees meer">Lees meer</a>
 		</p>
 		</details>
 	</div>
   </section>
 
-  
-	
-	
-	
-	
-
-<section class="ftco-section">
+<section class="ftco-section"> <!--Werk Momenten-->
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12 text-center">
@@ -363,31 +381,23 @@
 	</div>
 </section>
 
-
-		
-
-
-
-
-
-
-
-		 <footer> <!--footer--------------->
-			<!--heading-->
-		   <p>Social media</p>
-			<!--paragraph-->
-			<p>Wil je meer zien van mij?  </p>
-			<!--social-->
-		   <div class="social-icons">
-		   <a href="https://github.com/bkhaie"><i class="fab fa-github"></i></a>
-		   <a href="https://twitter.com/Badrkhaie"><i class="fab fa-twitter"></i></a>
-		   <a href="https://www.linkedin.com/in/badr-khaie-2b805267/"><i class="fab fa-linkedin"></i></a>
-		   <a href="https://www.youtube.com/channel/UCZ-RI7bsQ7fF7bVr_5RS8lg"><i class="fab fa-youtube"></i></a>
-		   </div>
-			<!--copyright-->
-			<p class="copyright">Butter since 1998 ©</p>
-		 </footer> <!--footer end --------------->
+<footer> <!--footer--------------->
+<!--heading-->
+<p>Social media</p>
+<!--paragraph-->
+<p>Wil je meer zien van mij?  </p>
+<!--social-->
+<div class="social-icons">
+<a href="https://github.com/bkhaie"><i class="fab fa-github"></i></a>
+<a href="https://twitter.com/Badrkhaie"><i class="fab fa-twitter"></i></a>
+<a href="https://www.linkedin.com/in/badr-khaie-2b805267/"><i class="fab fa-linkedin"></i></a>
+<a href="https://www.youtube.com/channel/UCZ-RI7bsQ7fF7bVr_5RS8lg"><i class="fab fa-youtube"></i></a>
+</div>
+<!--copyright-->
+<p class="copyright">Butter since 1998 ©</p>
+</footer> <!--footer end --------------->
 		</main>
+		
 <script src="JS/jquery.min.js"></script>
 <script src="JS/owl.carousel.min.js"></script>
 <script src="JS/main.js"></script>		
