--- a/MijnErvaringen.html
+++ b/MijnErvaringen.html
@@ -82,7 +82,7 @@
 
 	  </nav> 												<!--- Navbar End    -->		   
 	  <main>
-<div id="toggle" style="display: none">
+<div id="toggle" style="display: none">   <!--- Calculator  -->		
 	<div class="draggable"  >
 		<div class="draggableheader">
 			<div class="cal-container">
@@ -117,28 +117,27 @@
 	</div>
 </div>
 		
-		
-		  <div class="expando js-expando">
-			<div class="expando__inner js-expando-inner">
-			  <div class="expando__inner-inverter js-expando-inner-inverter">
-				<div class="expando__content js-content">
-				  <ul class="expando__content-list">
-					<li>  <button class="button1" onclick="openCalculator()">🧮Calculator</button> </li>
-					<li>  Upcomming.. </button> </li>
-		
-				  </ul>
-		
-				  <button class="expando__close js-expando-collapse-btn">Close</button>
-				</div>
-		
-				<button class="expando__btn js-expando-expand-btn">
-					<div class="plusgroote">
-					<B>+</B>
-					</div>
-				  </button>
-			  </div>
-			</div>
-		  </div>
+<div class="expando js-expando">  <!--- Button widget    -->		
+<div class="expando__inner js-expando-inner">
+	<div class="expando__inner-inverter js-expando-inner-inverter">
+	<div class="expando__content js-content">
+		<ul class="expando__content-list">
+		<li>  <button class="button1" onclick="openCalculator()">🧮Calculator</button> </li>
+		<li>  Upcomming.. </button> </li>
+
+		</ul>
+
+		<button class="expando__close js-expando-collapse-btn">Close</button>
+	</div>
+
+	<button class="expando__btn js-expando-expand-btn">
+		<div class="plusgroote">
+		<B>+</B>
+		</div>
+		</button>
+	</div>
+</div>
+</div>
 
 <section>      <!--Werk Ervaring -->
 	<div class="dropdown">
@@ -397,7 +396,7 @@
 <p class="copyright">Butter since 1998 ©</p>
 </footer> <!--footer end --------------->
 		</main>
-		
+
 <script src="JS/jquery.min.js"></script>
 <script src="JS/owl.carousel.min.js"></script>
 <script src="JS/main.js"></script>		
