--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="CSS/style.css">
 <link rel="stylesheet" href="bootstrap/bootstrap.css/bootstrap.min.css">
 <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/js/regular.min.js"/>
+
 
 
 </head>
@@ -178,21 +178,20 @@
 
 
 
-		 <footer> <!--footer--------------->
-			<!--heading-->
-		   <p>Social media</p>
-			<!--paragraph-->
-			<p>Wil je meer zien van mij?  </p>
-			<!--social-->
-		   <div class="social-icons">
-		   <a href="https://github.com/bkhaie"><i class="fab fa-github"></i></a>
-		   <a href="https://twitter.com/Badrkhaie"><i class="fab fa-twitter"></i></a>
-		   <a href="https://www.linkedin.com/in/badr-khaie-2b805267/"><i class="fab fa-linkedin"></i></a>
-		   <a href="https://www.youtube.com/channel/UCZ-RI7bsQ7fF7bVr_5RS8lg"><i class="fab fa-youtube"></i></a>
-		   </div>
-			<!--copyright-->
-			<p class="copyright">Butter since 1998 ©</p>
-		 </footer> <!--footer end --------------->
+<footer> <!--footer--------------->
+<div class="socialcontainer">
+	<h2>Social media</h2>
+	<p>Wil je meer zien van mij?  </p>
+		<div class="social-icons">
+			<a href="https://github.com/bkhaie"><i class="fab fa-github"></i></a>
+			<a href="https://twitter.com/Badrkhaie"><i class="fab fa-twitter"></i></a>
+			<a href="https://www.linkedin.com/in/badr-khaie-2b805267/"><i class="fab fa-linkedin"></i></a>
+			<a href="https://www.youtube.com/channel/UCZ-RI7bsQ7fF7bVr_5RS8lg"><i class="fab fa-youtube"></i></a>
+		</div>
+		<p class="copyright">Butter since 1998 ©</p>
+
+</div>
+</footer> <!--footer end --------------->
 		</main>
 <script src="JS/expando.js"></script>
 <script src="JS/dark.js"></script>
