--- a/Tijdlijn.html
+++ b/Tijdlijn.html
@@ -215,21 +215,20 @@
 
 
 
-		 <footer> <!--footer--------------->
-			<!--heading-->
-		   <p>Social media</p>
-			<!--paragraph-->
-			<p>Wil je meer zien van mij?  </p>
-			<!--social-->
-		   <div class="social-icons">
-		   <a href="https://github.com/bkhaie"><i class="fab fa-github"></i></a>
-		   <a href="https://twitter.com/Badrkhaie"><i class="fab fa-twitter"></i></a>
-		   <a href="https://www.linkedin.com/in/badr-khaie-2b805267/"><i class="fab fa-linkedin"></i></a>
-		   <a href="https://www.youtube.com/channel/UCZ-RI7bsQ7fF7bVr_5RS8lg"><i class="fab fa-youtube"></i></a>
-		   </div>
-			<!--copyright-->
+<footer> <!--footer--------------->
+	<div class="socialcontainer">
+		<h2>Social media</h2>
+		<p>Wil je meer zien van mij?  </p>
+			<div class="social-icons">
+				<a href="https://github.com/bkhaie"><i class="fab fa-github"></i></a>
+				<a href="https://twitter.com/Badrkhaie"><i class="fab fa-twitter"></i></a>
+				<a href="https://www.linkedin.com/in/badr-khaie-2b805267/"><i class="fab fa-linkedin"></i></a>
+				<a href="https://www.youtube.com/channel/UCZ-RI7bsQ7fF7bVr_5RS8lg"><i class="fab fa-youtube"></i></a>
+			</div>
 			<p class="copyright">Butter since 1998 ©</p>
-		 </footer> <!--footer end --------------->
+	
+	</div>
+	</footer> <!--footer end --------------->
 		</main>
 <script src="JS/expando.js"></script>
 <script src="JS/dark.js"></script>
