--- a/MijnErvaringen.html
+++ b/MijnErvaringen.html
@@ -117,26 +117,27 @@
 	</div>
 </div>
 		
-<div class="expando js-expando">  <!--- Button widget    -->		
-<div class="expando__inner js-expando-inner">
-	<div class="expando__inner-inverter js-expando-inner-inverter">
-	<div class="expando__content js-content">
-		<ul class="expando__content-list">
-		<li>  <button class="button1" onclick="openCalculator()">🧮Calculator</button> </li>
-		<li>  Upcomming.. </button> </li>
-
-		</ul>
-
-		<button class="expando__close js-expando-collapse-btn">Close</button>
-	</div>
-
-	<button class="expando__btn js-expando-expand-btn">
-		<div class="plusgroote">
-		<B>+</B>
+<div class="draggable"  >   <!--- Button widget  -->	
+	<div class="draggableheader">
+		<div class="expando js-expando">
+			<div class="expando__inner js-expando-inner">
+				<div class="expando__inner-inverter js-expando-inner-inverter">
+					<div class="expando__content js-content">
+						<ul class="expando__content-list">
+							<li>  <button class="button1" onclick="openCalculator()">🧮Calculator </button> </li>
+							<li>  Upcomming.. </button> </li>
+						</ul>
+						<button class="expando__close js-expando-collapse-btn">Close</button>
+					</div>
+						<button class="expando__btn js-expando-expand-btn">
+						<div class="plusgroote">
+						<B>+</B>
+						</div>
+						</button>
+				</div>
+			</div>
 		</div>
-		</button>
 	</div>
-</div>
 </div>
 
 <section>      <!--Werk Ervaring -->
