--- a/Projecten.html
+++ b/Projecten.html
@@ -3,14 +3,14 @@
 		<meta charset="utf-8">
 		<meta content="IE-edge" http-equiv="X-UA-Compatible">
 		<meta content="width=device-width, initial-scale=1.0" name="viewport">
-		<title>Home</title>
+		<title>Projecten</title>
 		<link rel="stylesheet" href="CSS/style.css">
 		<link rel="stylesheet" href="bootstrap/bootstrap.css/bootstrap.min.css">
 		<link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
 	</head>
 
 <body class="light-theme">
-	<nav class="navbar navbar-expand-lg navbar-dark" >  <!--- Navbar     -->
+<nav class="navbar navbar-expand-lg navbar-dark" >  <!--- Navbar     -->
 		<a class="navbar-brand" >Portofolio</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
 		  <span class="navbar-toggler-icon"></span>
@@ -78,8 +78,8 @@
 			</ul>
 
 </div>
-
-	  </nav> 												<!--- Navbar End   . -->		   
+</nav> <!--- Navbar End   . -->
+														   
 <main>
 <div id="toggle" style="display: none">   <!--- Calculator  -->		
 	<div class="draggable"  >
@@ -139,30 +139,38 @@
 	</div>
 </div>
 
-<div class="about-container"> <!--about-me-text-->
-	<div class="flip-card">
-		<div class="flip-card-inner">
-		  <div class="flip-card-front">
-			<img src="Pictures/profile.png"  alt="Avatar" style="width:250px;height:250px;">
-		  </div>
-		  <div class="flip-card-back">
-			<h1>Badr Khaie</h1>
-			<p>Student Mondriaan</p>
-			<p> <B>- Fun fact -</B> <br>I love Sport 🏋🏻<br> <i> "No pain no gain" </i> </p>
-			<a href="" class="btn btn-dark" role="button" aria-pressed="true">Download CV</a>
-		  </div>
+<div class="containerleft">
+	<div class="content">
+		<a href="https://bkhaie.github.io/Portofolio/" target="_blank">
+		<div class="content-overlay"></div>
+		<img class="content-image"  src="Pictures/Portofolio.png" >
+		<div class="content-details">
+			<h3 class="content-title">Introduction</h3>
 		</div>
-	  </div>
-  <div class="about-text">
-		<p>Over mij</p>
-		<p>Software Developer</p>
-		<p>Als MBO student bij de Roc Mondriaan ben ik bereid om door te groeien van Software Developer (MBO) Naar Cybersecurity (HBO) <br>
-           <i> "Who dares wins 🏆"</i> </p>
-		<p>Wil je meer over mij weten? <br> Neem contact op!</p>
-		<a href="Contact.html" class="btn btn-dark" role="button" aria-pressed="true">Contact</a>
-
-
-  </div>
+		</a>
+	</div>
+</div>
+<div class="containerleft">
+	<div class="content">
+		<a href="https://bkhaie.github.io/Portofolio/" target="_blank">
+		<div class="content-overlay"></div>
+		<img class="content-image"  src="Pictures/Portofolio.png" >
+		<div class="content-details">
+			<h3 class="content-title">Introduction</h3>
+		</div>
+		</a>
+	</div>
+</div>
+<div class="containerleft">
+	<div class="content">
+		<a href="https://bkhaie.github.io/Portofolio/" target="_blank">
+		<div class="content-overlay"></div>
+		<img class="content-image"  src="Pictures/Portofolio.png" >
+		<div class="content-details">
+			<h3 class="content-title">Introduction</h3>
+		</div>
+		</a>
+	</div>
 </div>
 
 <footer> <!--footer--------------->
