--- a/Ervaringen.html
+++ b/Ervaringen.html
@@ -10,6 +10,7 @@
 		<link rel="stylesheet" href="CSS/owl.carousel.min.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/4.5.6/css/ionicons.min.css">
 	</head>
+	
 <body class="light-theme">
 	<nav class="navbar navbar-expand-lg navbar-dark" >  <!--- Navbar     -->
 		<a class="navbar-brand" href="#">Portofolio</a>
@@ -22,10 +23,13 @@
 					<a class="nav-link" href="index.html">Home <span class="sr-only"></span></a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="MijnErvaringen.html">Mijn Ervaringen</a>
+					<a class="nav-link" href="Ervaringen.html">Ervaringen</a>
 					</li>
 				<li class="nav-item">
 					<a class="nav-link" href="Tijdlijn.html">Tijdlijn</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="Projecten.html">Projecten</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="Contact.html">Contact</a>
