--- a/Tijdlijn.html
+++ b/Tijdlijn.html
@@ -1,114 +1,92 @@
 <html>
-<head>
-<meta charset="utf-8">
-<meta content="IE-edge" http-equiv="X-UA-Compatible">
-<meta content="width=device-width, initial-scale=1.0" name="viewport">
-<title>Tijdlijn 🕒</title>
-<link rel="stylesheet" href="CSS/style.css">
-<link rel="stylesheet" href="bootstrap/bootstrap.css/bootstrap.min.css">
-<link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
+	<head>
+		<meta charset="utf-8">
+		<meta content="IE-edge" http-equiv="X-UA-Compatible">
+		<meta content="width=device-width, initial-scale=1.0" name="viewport">
+		<title>Tijdlijn 🕒</title>
+		<link rel="stylesheet" href="CSS/style.css">
+		<link rel="stylesheet" href="bootstrap/bootstrap.css/bootstrap.min.css">
+		<link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
+		<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic'/>
+	</head>
 
-<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic'/>
-
-</head>
 <body class="light-theme">
-	<nav class="navbar navbar-expand-lg navbar-dark" >  <!--- Navbar     -->
-		<a class="navbar-brand" href="#">Portofolio</a>
-		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-		  <span class="navbar-toggler-icon"></span>
-		</button>
+<nav class="navbar navbar-expand-lg navbar-dark" >  <!--- Navbar     -->
+<a class="navbar-brand" href="#">Portofolio</a>
+<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+	<span class="navbar-toggler-icon"></span>
+</button>
 <div class="collapse navbar-collapse" id="navbarText">
-			<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-				<li class="nav-item">
-					<a class="nav-link" href="index.html">Home <span class="sr-only"></span></a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="MijnErvaringen.html">Mijn Ervaringen</a>
-					</li>
-				<li class="nav-item">
-					<a class="nav-link" href="Tijdlijn.html">Tijdlijn</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="Contact.html">Contact</a>
-				</li> 
-				<div class="theme-switch-wrapper">
-					<label class="theme-switch" for="checkbox">
-					  <input type="checkbox" id="checkbox" />
-					  <div class="slider">
-						<svg             
-						  width="16"
-						  height="16"
-						  viewBox="0 0 24 24"
-						  fill="none"
-						  stroke="currentColor"
-						  stroke-width="2"
-						  stroke-linecap="round"
-						  stroke-linejoin="round"
-						  class="feather feather-sun"
-						>
-						  <circle cx="12" cy="12" r="5"></circle>
-						  <line x1="12" y1="1" x2="12" y2="3"></line>
-						  <line x1="12" y1="21" x2="12" y2="23"></line>
-						  <line x1="4.22" y1="4.22" x2="5.64" y2="5.64"></line>
-						  <line x1="18.36" y1="18.36" x2="19.78" y2="19.78"></line>
-						  <line x1="1" y1="12" x2="3" y2="12"></line>
-						  <line x1="21" y1="12" x2="23" y2="12"></line>
-						  <line x1="4.22" y1="19.78" x2="5.64" y2="18.36"></line>
-						  <line x1="18.36" y1="5.64" x2="19.78" y2="4.22"></line>
-						</svg>
-						<svg
-						  width="16"
-						  height="16"
-						  viewBox="0 0 24 24"
-						  fill="none"
-						  stroke="currentColor"
-						  stroke-width="2"
-						  stroke-linecap="round"
-						  stroke-linejoin="round"
-						  class="feather feather-moon"
-						>
-						  <path
-							d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"
-						  ></path>
-						</svg>
-					  </div>
-					</label>
-				  </div>
-			</ul>
-
-</div>
-			</ul>
-
-</div>
-
-	  </nav> 												<!--- Navbar End    -->		   
-	  <main>
-
-
-<div class="draggable"  >   <!--- Button widget  -->	
-	<div class="draggableheader">
-		<div class="expando js-expando">
-			<div class="expando__inner js-expando-inner">
-				<div class="expando__inner-inverter js-expando-inner-inverter">
-					<div class="expando__content js-content">
-						<ul class="expando__content-list">
-							<li>  <button class="button1" onclick="openCalculator()">🧮Calculator </button> </li>
-							<li>  Upcomming.. </button> </li>
-						</ul>
-						<button class="expando__close js-expando-collapse-btn">Close</button>
-					</div>
-						<button class="expando__btn js-expando-expand-btn">
-						<div class="plusgroote">
-						<B>+</B>
-						</div>
-						</button>
+	<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+		<li class="nav-item">
+			<a class="nav-link" href="index.html">Home <span class="sr-only"></span></a>
+		</li>
+		<li class="nav-item">
+			<a class="nav-link" href="Ervaringen.html">Ervaringen</a>
+			</li>
+		<li class="nav-item">
+			<a class="nav-link" href="Tijdlijn.html">Tijdlijn</a>
+		</li>
+		<li class="nav-item">
+			<a class="nav-link" href="Projecten.html">Projecten</a>
+		</li>
+		<li class="nav-item">
+			<a class="nav-link" href="Contact.html">Contact</a>
+		</li> 
+		<div class="theme-switch-wrapper">
+			<label class="theme-switch" for="checkbox">
+				<input type="checkbox" id="checkbox" />
+				<div class="slider">
+				<svg             
+					width="16"
+					height="16"
+					viewBox="0 0 24 24"
+					fill="none"
+					stroke="currentColor"
+					stroke-width="2"
+					stroke-linecap="round"
+					stroke-linejoin="round"
+					class="feather feather-sun"
+				>
+					<circle cx="12" cy="12" r="5"></circle>
+					<line x1="12" y1="1" x2="12" y2="3"></line>
+					<line x1="12" y1="21" x2="12" y2="23"></line>
+					<line x1="4.22" y1="4.22" x2="5.64" y2="5.64"></line>
+					<line x1="18.36" y1="18.36" x2="19.78" y2="19.78"></line>
+					<line x1="1" y1="12" x2="3" y2="12"></line>
+					<line x1="21" y1="12" x2="23" y2="12"></line>
+					<line x1="4.22" y1="19.78" x2="5.64" y2="18.36"></line>
+					<line x1="18.36" y1="5.64" x2="19.78" y2="4.22"></line>
+				</svg>
+				<svg
+					width="16"
+					height="16"
+					viewBox="0 0 24 24"
+					fill="none"
+					stroke="currentColor"
+					stroke-width="2"
+					stroke-linecap="round"
+					stroke-linejoin="round"
+					class="feather feather-moon"
+				>
+					<path
+					d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"
+					></path>
+				</svg>
 				</div>
+			</label>
 			</div>
-		</div>
-	</div>
+	</ul>
+
 </div>
-<!--Expand Calculator-------------->
-<div id="toggle" style="display: none">
+	</ul>
+
+</div>
+
+</nav> 												<!--- Navbar End    -->		   
+
+<main>
+<div id="toggle" style="display: none">   <!--- Calculator  -->		
 	<div class="draggable"  >
 		<div class="draggableheader">
 			<div class="cal-container">
@@ -143,10 +121,30 @@
 	</div>
 </div>
 		
-
-<!-- The Timeline -->
-
-<ul class="timeline">
+<div class="draggable"  >   <!--- Button widget  -->	
+	<div class="draggableheader">
+		<div class="expando js-expando">
+			<div class="expando__inner js-expando-inner">
+				<div class="expando__inner-inverter js-expando-inner-inverter">
+					<div class="expando__content js-content">
+						<ul class="expando__content-list">
+							<li>  <button class="button1" onclick="openCalculator()">🧮Calculator </button> </li>
+							<li>  Upcomming.. </button> </li>
+						</ul>
+						<button class="expando__close js-expando-collapse-btn">Close</button>
+					</div>
+						<button class="expando__btn js-expando-expand-btn">
+						<div class="plusgroote">
+						<B>+</B>
+						</div>
+						</button>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+		
+<ul class="timeline"><!-- The Timeline -->
 
 	<!-- Item 6 -->
 	<li>
@@ -215,9 +213,6 @@
 	</li>
   
 </ul>
-
-
-
 
 <footer> <!--footer--------------->
 	<div class="socialcontainer">
