Project pagina Colums and rows

--- a/Projecten.html
+++ b/Projecten.html
@@ -139,37 +139,78 @@
 	</div>
 </div>
 
-<div class="containerleft">
-	<div class="content">
-		<a href="https://bkhaie.github.io/Portofolio/" target="_blank">
-		<div class="content-overlay"></div>
-		<img class="content-image"  src="Pictures/Portofolio.png" >
-		<div class="content-details">
-			<h3 class="content-title">Introduction</h3>
+<div class="container">
+	<div class="row">
+		<div class="col-md-4">
+			<div class="content">
+				<a href="https://bkhaie.github.io/Portofolio/" target="_blank">
+				<div class="content-overlay"></div>
+				<img class="content-image"  src="Pictures/Portofolio.png" >
+				<div class="content-details">
+					<h3 class="content-title">Introduction</h3>
+				</div>
+				</a>
+			</div>
 		</div>
-		</a>
+		<div class="col-md-4">
+			<div class="content">
+				<a href="https://bkhaie.github.io/Portofolio/" target="_blank">
+				<div class="content-overlay"></div>
+				<img class="content-image"  src="Pictures/Portofolio.png" >
+				<div class="content-details">
+					<h3 class="content-title">Introduction</h3>
+				</div>
+				</a>
+			</div>
+		</div>
+		<div class="col-md-4">
+			<div class="content">
+				<a href="https://bkhaie.github.io/Portofolio/" target="_blank">
+				<div class="content-overlay"></div>
+				<img class="content-image"  src="Pictures/Portofolio.png" >
+				<div class="content-details">
+					<h3 class="content-title">Introduction</h3>
+				</div>
+				</a>
+			</div>
+		</div>
 	</div>
 </div>
-<div class="containerleft">
-	<div class="content">
-		<a href="https://bkhaie.github.io/Portofolio/" target="_blank">
-		<div class="content-overlay"></div>
-		<img class="content-image"  src="Pictures/Portofolio.png" >
-		<div class="content-details">
-			<h3 class="content-title">Introduction</h3>
+<div class="container">
+	<div class="row">
+		<div class="col-md-4">
+			<div class="content">
+				<a href="https://bkhaie.github.io/Portofolio/" target="_blank">
+				<div class="content-overlay"></div>
+				<img class="content-image"  src="Pictures/Portofolio.png" >
+				<div class="content-details">
+					<h3 class="content-title">Introduction</h3>
+				</div>
+				</a>
+			</div>
 		</div>
-		</a>
-	</div>
-</div>
-<div class="containerleft">
-	<div class="content">
-		<a href="https://bkhaie.github.io/Portofolio/" target="_blank">
-		<div class="content-overlay"></div>
-		<img class="content-image"  src="Pictures/Portofolio.png" >
-		<div class="content-details">
-			<h3 class="content-title">Introduction</h3>
+		<div class="col-md-4">
+			<div class="content">
+				<a href="https://bkhaie.github.io/Portofolio/" target="_blank">
+				<div class="content-overlay"></div>
+				<img class="content-image"  src="Pictures/Portofolio.png" >
+				<div class="content-details">
+					<h3 class="content-title">Introduction</h3>
+				</div>
+				</a>
+			</div>
 		</div>
-		</a>
+		<div class="col-md-4">
+			<div class="content">
+				<a href="https://bkhaie.github.io/Portofolio/" target="_blank">
+				<div class="content-overlay"></div>
+				<img class="content-image"  src="Pictures/Portofolio.png" >
+				<div class="content-details">
+					<h3 class="content-title">Introduction</h3>
+				</div>
+				</a>
+			</div>
+		</div>
 	</div>
 </div>
 
