--- a/Projecten.html
+++ b/Projecten.html
@@ -147,7 +147,7 @@
 				<div class="content-overlay"></div>
 				<img class="content-image"  src="Pictures/Portofolio.png" >
 				<div class="content-details">
-					<h3 class="content-title">Introduction</h3>
+					<h3 class="content-title">Portofolio</h3>
 				</div>
 				</a>
 			</div>
@@ -156,9 +156,9 @@
 			<div class="content">
 				<a href="https://bkhaie.github.io/Portofolio/" target="_blank">
 				<div class="content-overlay"></div>
-				<img class="content-image"  src="Pictures/Portofolio.png" >
+				<img class="content-image"  src="Pictures/" >
 				<div class="content-details">
-					<h3 class="content-title">Introduction</h3>
+					<h3 class="content-title">Kaartspel</h3>
 				</div>
 				</a>
 			</div>
@@ -167,9 +167,9 @@
 			<div class="content">
 				<a href="https://bkhaie.github.io/Portofolio/" target="_blank">
 				<div class="content-overlay"></div>
-				<img class="content-image"  src="Pictures/Portofolio.png" >
+				<img class="content-image"  src="Pictures/" >
 				<div class="content-details">
-					<h3 class="content-title">Introduction</h3>
+					<h3 class="content-title">Rekenmachine</h3>
 				</div>
 				</a>
 			</div>
@@ -182,9 +182,9 @@
 			<div class="content">
 				<a href="https://bkhaie.github.io/Portofolio/" target="_blank">
 				<div class="content-overlay"></div>
-				<img class="content-image"  src="Pictures/Portofolio.png" >
+				<img class="content-image"  src="Pictures/" >
 				<div class="content-details">
-					<h3 class="content-title">Introduction</h3>
+					<h3 class="content-title">Bloemenwinkel</h3>
 				</div>
 				</a>
 			</div>
@@ -193,9 +193,9 @@
 			<div class="content">
 				<a href="https://bkhaie.github.io/Portofolio/" target="_blank">
 				<div class="content-overlay"></div>
-				<img class="content-image"  src="Pictures/Portofolio.png" >
+				<img class="content-image"  src="Pictures/" >
 				<div class="content-details">
-					<h3 class="content-title">Introduction</h3>
+					<h3 class="content-title">Upcomming...</h3>
 				</div>
 				</a>
 			</div>
@@ -204,9 +204,9 @@
 			<div class="content">
 				<a href="https://bkhaie.github.io/Portofolio/" target="_blank">
 				<div class="content-overlay"></div>
-				<img class="content-image"  src="Pictures/Portofolio.png" >
+				<img class="content-image"  src="Pictures/" >
 				<div class="content-details">
-					<h3 class="content-title">Introduction</h3>
+					<h3 class="content-title">Upcomming...</h3>
 				</div>
 				</a>
 			</div>
