--- a/Projecten.html
+++ b/Projecten.html
@@ -156,7 +156,7 @@
 			<div class="content">
 				<a href="https://bkhaie.github.io/Portofolio/" target="_blank">
 				<div class="content-overlay"></div>
-				<img class="content-image"  src="Pictures/" >
+				<img class="content-image"  src="Pictures/Portofolio.png" >
 				<div class="content-details">
 					<h3 class="content-title">Kaartspel</h3>
 				</div>
@@ -167,7 +167,7 @@
 			<div class="content">
 				<a href="https://bkhaie.github.io/Portofolio/" target="_blank">
 				<div class="content-overlay"></div>
-				<img class="content-image"  src="Pictures/" >
+				<img class="content-image"  src="Pictures/Portofolio.png" >
 				<div class="content-details">
 					<h3 class="content-title">Rekenmachine</h3>
 				</div>
@@ -182,7 +182,7 @@
 			<div class="content">
 				<a href="https://bkhaie.github.io/Portofolio/" target="_blank">
 				<div class="content-overlay"></div>
-				<img class="content-image"  src="Pictures/" >
+				<img class="content-image"  src="Pictures/Portofolio.png" >
 				<div class="content-details">
 					<h3 class="content-title">Bloemenwinkel</h3>
 				</div>
@@ -193,7 +193,7 @@
 			<div class="content">
 				<a href="https://bkhaie.github.io/Portofolio/" target="_blank">
 				<div class="content-overlay"></div>
-				<img class="content-image"  src="Pictures/" >
+				<img class="content-image"  src="Pictures/Portofolio.png" >
 				<div class="content-details">
 					<h3 class="content-title">Upcomming...</h3>
 				</div>
@@ -204,9 +204,9 @@
 			<div class="content">
 				<a href="https://bkhaie.github.io/Portofolio/" target="_blank">
 				<div class="content-overlay"></div>
-				<img class="content-image"  src="Pictures/" >
+				<img class="content-image"  src="Pictures/Portofolio.png" >
 				<div class="content-details">
-					<h3 class="content-title">Upcomming...</h3>
+					<h3 class="content-title">Project</h3>
 				</div>
 				</a>
 			</div>
