--- a/Projecten.html
+++ b/Projecten.html
@@ -11,7 +11,7 @@
 
 <body class="light-theme">
 <nav class="navbar navbar-expand-lg navbar-dark" >  <!--- Navbar     -->
-		<a class="navbar-brand" >Portofolio</a>
+		<a class="navbar-brand" >Portfolio</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
 		  <span class="navbar-toggler-icon"></span>
 		</button>
@@ -143,20 +143,20 @@
 	<div class="row">
 		<div class="col-md-4">
 			<div class="content">
-				<a href="https://bkhaie.github.io/Portofolio/" target="_blank">
+				<a href="https://bkhaie.github.io/Portfolio/" target="_blank">
 				<div class="content-overlay"></div>
-				<img class="content-image"  src="Pictures/Portofolio.png" >
+				<img class="content-image"  src="Pictures/Portfolio.png" >
 				<div class="content-details">
-					<h3 class="content-title">Portofolio</h3>
+					<h3 class="content-title">Portfolio</h3>
 				</div>
 				</a>
 			</div>
 		</div>
 		<div class="col-md-4">
 			<div class="content">
-				<a href="https://bkhaie.github.io/Portofolio/" target="_blank">
+				<a href="https://bkhaie.github.io/Portfolio/" target="_blank">
 				<div class="content-overlay"></div>
-				<img class="content-image"  src="Pictures/Portofolio.png" >
+				<img class="content-image"  src="Pictures/Portfolio.png" >
 				<div class="content-details">
 					<h3 class="content-title">Kaartspel</h3>
 				</div>
@@ -165,9 +165,9 @@
 		</div>
 		<div class="col-md-4">
 			<div class="content">
-				<a href="https://bkhaie.github.io/Portofolio/" target="_blank">
+				<a href="https://bkhaie.github.io/Portfolio/" target="_blank">
 				<div class="content-overlay"></div>
-				<img class="content-image"  src="Pictures/Portofolio.png" >
+				<img class="content-image"  src="Pictures/Portfolio.png" >
 				<div class="content-details">
 					<h3 class="content-title">Rekenmachine</h3>
 				</div>
@@ -180,9 +180,9 @@
 	<div class="row">
 		<div class="col-md-4">
 			<div class="content">
-				<a href="https://bkhaie.github.io/Portofolio/" target="_blank">
+				<a href="https://bkhaie.github.io/Portfolio/" target="_blank">
 				<div class="content-overlay"></div>
-				<img class="content-image"  src="Pictures/Portofolio.png" >
+				<img class="content-image"  src="Pictures/Portfolio.png" >
 				<div class="content-details">
 					<h3 class="content-title">Bloemenwinkel</h3>
 				</div>
@@ -191,9 +191,9 @@
 		</div>
 		<div class="col-md-4">
 			<div class="content">
-				<a href="https://bkhaie.github.io/Portofolio/" target="_blank">
+				<a href="https://bkhaie.github.io/Portfolio/" target="_blank">
 				<div class="content-overlay"></div>
-				<img class="content-image"  src="Pictures/Portofolio.png" >
+				<img class="content-image"  src="Pictures/Portfolio.png" >
 				<div class="content-details">
 					<h3 class="content-title">Upcomming...</h3>
 				</div>
@@ -202,9 +202,9 @@
 		</div>
 		<div class="col-md-4">
 			<div class="content">
-				<a href="https://bkhaie.github.io/Portofolio/" target="_blank">
+				<a href="https://bkhaie.github.io/Portfolio/" target="_blank">
 				<div class="content-overlay"></div>
-				<img class="content-image"  src="Pictures/Portofolio.png" >
+				<img class="content-image"  src="Pictures/Portfolio.png" >
 				<div class="content-details">
 					<h3 class="content-title">Project</h3>
 				</div>
