--- a/Tijdlijn.html
+++ b/Tijdlijn.html
@@ -12,7 +12,7 @@
 
 <body class="light-theme">
 <nav class="navbar navbar-expand-lg navbar-dark" >  <!--- Navbar     -->
-<a class="navbar-brand" href="#">Portofolio</a>
+<a class="navbar-brand" href="#">Portfolio</a>
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
 	<span class="navbar-toggler-icon"></span>
 </button>
