--- a/Projecten.html
+++ b/Projecten.html
@@ -195,7 +195,7 @@
 				<div class="content-overlay"></div>
 				<img class="content-image"  src="Pictures/Portfolio.png" >
 				<div class="content-details">
-					<h3 class="content-title">Upcomming...</h3>
+					<h3 class="content-title">BoterXKaas</h3>
 				</div>
 				</a>
 			</div>
