--- a/Projecten.html
+++ b/Projecten.html
@@ -180,7 +180,7 @@
 	<div class="row">
 		<div class="col-md-4">
 			<div class="content">
-				<a href="Projecten/Bloemenwinkel/Sprint1.html" target="_blank">
+				<a onclick="myWarn()"href="Projecten/Bloemenwinkel/Sprint1.html" target="_blank">
 				<div class="content-overlay"></div>
 				<img class="content-image"  src="Pictures/Bloemenwinkel.png" >
 				<div class="content-details">
@@ -229,6 +229,7 @@
 </div>
 </footer> <!--footer end --------------->
 		</main>
+<script src="JS/main.js"></script>		
 <script src="JS/expando.js"></script>
 <script src="JS/dark.js"></script>
 <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" data-auto-replace-svg="nest"></script>
