--- a/Projecten.html
+++ b/Projecten.html
@@ -180,9 +180,9 @@
 	<div class="row">
 		<div class="col-md-4">
 			<div class="content">
-				<a onclick="myWarn()"href="Projecten/Bloemenwinkel/Sprint1.html" target="_blank">
+				<a onclick="myWarn()"  target="_blank">
 				<div class="content-overlay"></div>
-				<img class="content-image"  src="Pictures/Bloemenwinkel.png" >
+				<img class="content-image"  src="Pictures/Bloemenwinkel.png" onclick="warn()">
 				<div class="content-details">
 					<h3 class="content-title">Bloemenwinkel</h3>
 				</div>
