--- a/index.html
+++ b/index.html
@@ -115,6 +115,32 @@
 		</div>
 	</div>
 </div>
+
+<div id="toggle2" style="display: none">   <!--- Tictak  -->		
+	<div class="draggable"  >
+		<div class="draggableheader">
+			<table class="board">
+				<tr>
+				  <td></td>
+				  <td></td>
+				  <td></td>
+				</tr>
+				<tr>
+				  <td></td>
+				  <td></td>
+				  <td></td>
+				</tr>
+				<tr>
+				  <td></td>
+				  <td></td>
+				  <td></td>
+				</tr>
+			  </table>
+			  
+			  <button>New Game</button>
+		</div>
+	</div>
+</div>
 		
 <div class="draggable"  >   <!--- Button widget  -->	
 	<div class="draggableheader">
@@ -124,7 +150,7 @@
 					<div class="expando__content js-content">
 						<ul class="expando__content-list">
 							<li>  <button class="button1" onclick="openCalculator()">🧮Calculator </button> </li>
-							<li>  Upcomming.. </button> </li>
+							<li>  <button class="button1" onclick="openTictak()">🎮TicTak </button> </li>
 						</ul>
 						<button class="expando__close js-expando-collapse-btn">Close</button>
 					</div>
