--- a/index.html
+++ b/index.html
@@ -116,31 +116,39 @@
 	</div>
 </div>
 
-<div id="toggle2" style="display: none">   <!--- Tictak  -->		
-	<div class="draggable"  >
-		<div class="draggableheader">
-			<table class="board">
-				<tr>
-				  <td></td>
-				  <td></td>
-				  <td></td>
-				</tr>
-				<tr>
-				  <td></td>
-				  <td></td>
-				  <td></td>
-				</tr>
-				<tr>
-				  <td></td>
-				  <td></td>
-				  <td></td>
-				</tr>
-			  </table>
-			  
-			  <button>New Game</button>
-		</div>
-	</div>
-</div>
+<div class="container-fluid">
+    <h1>Tic Tac Toe</h1>
+    <h2 id="results"></h2>
+    <button id="selectX" class="btn btn-default">Play as X</button>
+    <button id="selectO" class="btn btn-default">Play as O</button>
+    <div id="boardDisplay">
+      <div class="row">
+        <div id="grid0" class="col-md-offset-3 col-md-2 col-xs-4">
+        </div>
+        <div id="grid1" class="col-md-2 col-xs-4">
+        </div>
+        <div id="grid2" class="col-md-2 col-xs-4">
+        </div>
+      </div>
+      <div class="row">
+        <div id="grid3" class="col-md-offset-3 col-md-2 col-xs-4">
+        </div>
+        <div id="grid4" class="col-md-2 col-xs-4">
+        </div>
+        <div id="grid5" class="col-md-2 col-xs-4">
+        </div>
+      </div>
+      <div class="row">
+        <div id="grid6" class="col-md-offset-3 col-md-2 col-xs-4">
+        </div>
+        <div id="grid7" class="col-md-2 col-xs-4">
+        </div>
+        <div id="grid8" class="col-md-2 col-xs-4">
+        </div>
+      </div>
+    </div>
+  </div>
+
 		
 <div class="draggable"  >   <!--- Button widget  -->	
 	<div class="draggableheader">
@@ -206,6 +214,7 @@
 </div>
 </footer> <!--footer end --------------->
 		</main>
+<script src="JS/main.js"></script>
 <script src="JS/expando.js"></script>
 <script src="JS/dark.js"></script>
 <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" data-auto-replace-svg="nest"></script>
